--- a/examples/cephfs/secret.yaml
+++ b/examples/cephfs/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: csi-cephfs-secret
-  namespace: default
+  namespace: ceph-system
 stringData:
   # Required for statically provisioned volumes
   userID: <plaintext ID>
