--- a/deploy/cephfs/kubernetes/csi-nodeplugin-rbac.yaml
+++ b/deploy/cephfs/kubernetes/csi-nodeplugin-rbac.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cephfs-csi-nodeplugin
+  namespace: ceph-system
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -17,10 +18,11 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cephfs-csi-nodeplugin
+  namespace: ceph-system
 subjects:
   - kind: ServiceAccount
     name: cephfs-csi-nodeplugin
-    namespace: default
+    namespace: ceph-system
 roleRef:
   kind: ClusterRole
   name: cephfs-csi-nodeplugin
