--- a/deploy/cephfs/kubernetes/csi-provisioner-rbac.yaml
+++ b/deploy/cephfs/kubernetes/csi-provisioner-rbac.yaml
@@ -3,12 +3,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cephfs-csi-provisioner
+  namespace: ceph-system
 
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cephfs-external-provisioner-runner
+  namespace: ceph-system
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
@@ -57,6 +59,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cephfs-csi-provisioner-role
+  namespace: ceph-system
 subjects:
   - kind: ServiceAccount
     name: cephfs-csi-provisioner
@@ -70,8 +73,7 @@ roleRef:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  # replace with non-default namespace name
-  namespace: default
+  namespace: ceph-system
   name: cephfs-external-provisioner-cfg
 rules:
   # remove this once we stop supporting v1.0.0
@@ -87,13 +89,12 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cephfs-csi-provisioner-role-cfg
-  # replace with non-default namespace name
-  namespace: default
+  namespace: ceph-system
 subjects:
   - kind: ServiceAccount
     name: cephfs-csi-provisioner
     # replace with non-default namespace name
-    namespace: default
+    namespace: ceph-system
 roleRef:
   kind: Role
   name: cephfs-external-provisioner-cfg
