--- a/deploy/rbd/kubernetes/csi-nodeplugin-rbac.yaml
+++ b/deploy/rbd/kubernetes/csi-nodeplugin-rbac.yaml
@@ -3,11 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rbd-csi-nodeplugin
+  namespace: ceph-system
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rbd-csi-nodeplugin
+  namespace: ceph-system
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
@@ -24,10 +26,11 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rbd-csi-nodeplugin
+  namespace: ceph-system
 subjects:
   - kind: ServiceAccount
     name: rbd-csi-nodeplugin
-    namespace: default
+    namespace: ceph-system
 roleRef:
   kind: ClusterRole
   name: rbd-csi-nodeplugin
