--- a/examples/csi-config-map-sample.yaml
+++ b/examples/csi-config-map-sample.yaml
@@ -1,8 +1,16 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: ceph-system
+---
 # This is a sample configmap that helps define a Ceph cluster configuration
 # as required by the CSI plugins.
 apiVersion: v1
 kind: ConfigMap
+metadata:
+  name: ceph-csi-config
+  namespace: ceph-system
 # The <cluster-id> is used by the CSI plugin to uniquely identify and use a
 # Ceph cluster, the value MUST match the value provided as `clusterID` in the
 # StorageClass
@@ -39,5 +47,3 @@ data:
         }
       }
     ]
-metadata:
-  name: ceph-csi-config
